Updated config file

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: BlueNerd
+  name: Blue Nerd Solutions
   avatar: bio-photo.jpg
   bio: "This is a BlueNerd sample website."
   email: bluenerdsolutions@gmail.com
