--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,11 @@ logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Blue Nerd Solutions
-  avatar: bio-photo.jpg
-  bio: "This is a BlueNerd sample website."
+  name: GameLocker 
+  avatar: 
+  bio: "This is a GameLocker sample website."
   email: bluenerdsolutions@gmail.com
   # Do not include the @ symbol in your Twitter username
-  twitter: bluenerd
-  linkedin: #username
   github: BluestNerd
   orcid: # ID Number (ex. 0000-0000-0000-0000)
   researchgate: #username
@@ -22,24 +20,7 @@ owner:
     analytics:
     verify:
     scholar: #id
-  facebook: #username
-  instagram: #username
-  bing-verify:
-  stackoverflow: #123456/username from a "https://stackoverflow.com/users/123456/username" link
-  xing: #username
-  lastfm: #username
-  tumblr: #username
-  pinterest: #username
-  foursquare: #username
-  steam: #username
-  dribbble: #username
-  youtube: #username
-  soundcloud: #username
-  weibo: #username
-  flickr: #username
-  codepen: #username
-  disqus-shortname:
-
+ 
 # The following adjust the accents for your site. If you would like to further edit colors, fonts, font sizes, etc.
 # you may do so in _sass/variables.scss
 highlight-color: '#CC0000'
@@ -47,7 +28,7 @@ lowlight-color: '#000'
 
   # NOTE: If you would like your site to be licensed under a creative commons license, uncomment the 'yes' next to the type of license you wish to use.
 creative-commons:
-  cc-by: #yes
+  cc-by: yes
   cc-by-nc: yes
 
 #DO NOT EDIT BEYOND THIS POINT
